2008-09-22  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank.lisp (guess-package): Return NIL if string designator is
	NIL: makes files without IN-PACKAGE forms more *BREAK-ON-SIGNALS*
	friendly.

2008-09-22  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (wait-for-input): Implement this in backend,
	since read-char-no-hang doesn't work in fd-handlers.
	(install-sigint-handler): Go through invoke-interruption and
	with-interrupts to support nested interrupts.

	* slime.el (slime-lisp-implementations): Mention :env keyword
	in docstring.

2008-09-21  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-repl-input-end-mark): Deleted. It was always at
	the end of buffer. Use point-max instead.
	(slime-repl-eol): Removed.  The usual end-of-line does the same.

2008-09-21  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-eol-conversion-fixup): Return 0 (not nil) for
	anyting other than CRLF conventions.

2008-09-21  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp: Try to remove the first few internal frames
	from backtraces.
	(guess-stack-top): New function.
	(call-with-debugging-environment): Use it

	(frame-arguments): Return a list instead of a string.  Don't quote
	symbols.
	(source-locations): Recognize (:internal FOO) functions.

2008-09-21  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*backtrace-pprint-dispatch-table*):
	Honor *print-escape*.

2008-09-20  Ariel Badichi <abadichi@bezeqint.net>

	* slime.el (slime-with-output-end-mark):
	slime-repl-show-maximum-output no longer accepts any arguments.

2008-09-20  Helmut Eller  <heller@common-lisp.net>

	* test.sh: Parse the -S option as advertized.

	* slime.el (slime-randomize-test-order): Add the * to the
	docstring.
	([def-slime-test] break2): Also CCL is expected to fail here.

2008-09-20  Helmut Eller  <heller@common-lisp.net>

	Fix some of the bugs that I introduced with the last commits.
